# invent-monorepo

./: .gitignore  Cargo.toml  Makefile.toml  render.yaml
.github/workflows/: deploy.yml  develop.yml  pr-check.yml
crates/app-runner/: Cargo.toml
crates/app-runner/src/: lib.rs  server.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
invent-core/: Cargo.toml  start.sh
invent-core/src/: main.rs
invent-core/src/common/: mod.rs  permissions.rs
invent-core/src/extractors/: auth_user.rs  mod.rs
invent-core/src/middleware/: auth.rs  mod.rs
invent-core/src/services/product_service/api/: mod.rs  product.rs
invent-core/src/services/product_service/model/: product.rs
invent-core/src/services/product_service/repo/: product_repo.rs
scripts/: run-all.sh
services/product/: Cargo.toml  start.sh
services/product/src/: main.rs
services/product/src/api/: product.rs
services/product/src/model/: product.rs
services/product/src/repo/: product_repo.rs
traefik/: dynamic.yml  dynamic.yml.template  render_dynamic.py  start-traefik.sh  traefik.yml  traefik.yml.bak.1757159457
