[workspace]
members = ["crates/app-runner", "crates/db", "invent-core"]

[workspace.dependencies]
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "rust_decimal",
] }
rust_decimal = { version = "1.34", features = ["serde"] }
resolver = "2"
